tests/conformance/fail/borrow/mut_while_borrowed.ny
fn main() {
    let mut s = "hello"
    let r = &s
    s = "world"
    let _ = r
}
